# CSTL_SmartPointer

./: .gitignore  CMakeLists.txt
include/: BeginCode.h  SmartPointer.h
res/cmake/: CSTL_SmartPointerConfig.cmake.in
src/: SmartPointer.c
